header and nav styling

--- a/sass/_grid.scss
+++ b/sass/_grid.scss
@@ -17,7 +17,7 @@
 $sk-col-width:  85px;   //column width
 $sk-col-gutter: 15px;   //column gutter size
 $sk-col-count:  12;     //total column count
-$sk-tablet-col: 50px;   //column width for tablet portrait
+$sk-tablet-col: 60px;   //column width for tablet portrait
 
 @mixin grid-width($col-width: $sk-col-width) {
     width: ($col-width * $sk-col-count) + ($sk-col-gutter * ($sk-col-count));
@@ -55,13 +55,13 @@ $sk-tablet-col: 50px;   //column width for tablet portrait
 
 @mixin breakpoint($point) {
   @if $point == smallscreen {
-    @media only screen and (min-width: 768px) and (max-width: 959px){ @content; }
+    @media only screen and (min-width: 900px) and (max-width: 1200px){ @content; }
   }
   @else if $point == tablet  {
-    @media only screen and (max-width: 767px){ @content; }
+    @media only screen and (min-width: 768px)   { @content; }
   }
   @else if $point == landscape {
-    @media only screen and (min-width: 480px) and (max-width: 767px)  { @content; }
+    @media only screen and (min-width: 480px) and (max-width: 899px)  { @content; }
   }
   @else if $point == portrait{
     @media only screen and (max-width: 479px) { @content; }
@@ -135,7 +135,7 @@ $sk-tablet-col: 50px;   //column width for tablet portrait
 
     /* Note: Design for a width of 768px */
 
-    @media only screen and (min-width: 768px) and (max-width: 959px) {
+    @media only screen and (min-width: 900px) and (max-width: 1200px) {
         .container {                      position: relative; margin: 0 auto; padding: 0; 
                                           @include grid-width($sk-tablet-col);
                                      
@@ -191,9 +191,9 @@ $sk-tablet-col: 50px;   //column width for tablet portrait
     /* Note: Design for a width of 320px */
 
     @media only screen and (max-width: 767px) {
-        .container { width: 300px; 
+        .container { width: 90%; 
             
-            .columns, .column { margin-left: 0px;  margin-right: 0px;
+            .columns, .column { margin-left: 5%;  margin-right: 0px;
 
                 &.one,
                 &.two,
@@ -212,7 +212,7 @@ $sk-tablet-col: 50px;   //column width for tablet portrait
                 &.fifteen,
                 &.sixteen,
                 &.one-third,
-                &.two-thirds { width: 300px; }
+                &.two-thirds { width: 90%; }
 
                 /* Offsets */
                 .offset-by-one,
@@ -241,10 +241,10 @@ $sk-tablet-col: 50px;   //column width for tablet portrait
 
     /* Note: Design for a width of 480px */
 
-    @media only screen and (min-width: 480px) and (max-width: 767px) {
-        .container { width: 420px; 
+    @media only screen and (min-width: 480px) and (max-width: 899px) {
+        .container { width: 90%;
 
-            .columns, .column {margin-left: 0px;  margin-right: 0px;
+            .columns, .column {margin-left: 5%;  margin-right: 0px;
 
                 &.one,
                 &.two,
@@ -263,7 +263,7 @@ $sk-tablet-col: 50px;   //column width for tablet portrait
                 &.fifteen,
                 &.sixteen,
                 &.one-third,
-                &.two-thirds { width: 420px; }
+                &.two-thirds { width: 90%;}
 
             } // .column, .columns
         } // .container
