--- a/css/style.css
+++ b/css/style.css
@@ -66,7 +66,7 @@ table {
 /* line 64, ../sass/_base.scss */
 body {
   background: #fff;
-  font: 13px/18px "minion-pro", "Times New Roman", Helvetica, Arial, sans-serif;
+  font: 16px/21px "minion-pro", "Times New Roman", Helvetica, Arial, sans-serif;
   color: #444444;
   -webkit-font-smoothing: antialiased;
   /* Fix for webkit rendering */
@@ -130,15 +130,15 @@ h2 a:hover {
 
 /* line 98, ../sass/_base.scss */
 h3 {
-  font-size: 15px;
-  line-height: 18px;
+  font-size: 16px;
+  line-height: 21px;
   font-weight: bold;
 }
 
 /* line 99, ../sass/_base.scss */
 h4 {
-  font-size: 13px;
-  line-height: 18px;
+  font-size: 16px;
+  line-height: 21px;
   font-weight: bold;
 }
 
@@ -280,7 +280,7 @@ ol ol li, ol ul li {
 
 /* line 146, ../sass/_base.scss */
 li {
-  line-height: 18px;
+  line-height: 21px;
   margin-bottom: 0px;
 }
 
@@ -1496,7 +1496,7 @@ ul#nav-new li a:hover {
   color: #fbac18;
 }
 /* line 143, ../sass/_layout.scss */
-ul#nav-new li.current-menu-item a {
+ul#nav-new li.current-menu-item a, ul#nav-new li.current-page-ancestor a {
   color: #fbac18;
 }
 @media only screen and (min-width: 900px) and (max-width: 1200px) {
@@ -1619,7 +1619,6 @@ ul#nav-new:after {
 
 /* line 260, ../sass/_layout.scss */
 .home-form {
-  width: 100%;
   margin: 0 auto;
   padding-top: 85px;
   position: relative;
@@ -1627,17 +1626,67 @@ ul#nav-new:after {
   margin: 0 auto;
   /* Custom Select */
 }
-/* line 272, ../sass/_layout.scss */
+@media only screen and (min-width: 900px) and (max-width: 1200px) {
+  /* line 260, ../sass/_layout.scss */
+  .home-form {
+    padding-left: 0%;
+    padding-top: 25px;
+    width: 350px;
+    margin: 0;
+  }
+}
+@media only screen and (min-width: 480px) and (max-width: 899px) {
+  /* line 260, ../sass/_layout.scss */
+  .home-form {
+    padding-left: 0%;
+    padding-top: 0px;
+    margin: 0;
+    margin-top: -20px;
+    width: 350px;
+  }
+}
+@media only screen and (max-width: 479px) {
+  /* line 260, ../sass/_layout.scss */
+  .home-form {
+    padding-left: 0%;
+    padding-top: 0px;
+    margin: 0;
+    margin-top: -20px;
+    width: 350px;
+  }
+}
+/* line 299, ../sass/_layout.scss */
 .home-form label {
   display: none;
 }
-/* line 274, ../sass/_layout.scss */
+/* line 301, ../sass/_layout.scss */
 .home-form .field-group {
   display: inline;
   float: left;
-  margin: 0 10px 0 10px;
+  margin: 0 10px 10px 10px;
 }
-/* line 280, ../sass/_layout.scss */
+@media only screen and (min-width: 900px) and (max-width: 1200px) {
+  /* line 301, ../sass/_layout.scss */
+  .home-form .field-group {
+    display: block;
+    float: left;
+  }
+}
+@media only screen and (max-width: 479px) {
+  /* line 301, ../sass/_layout.scss */
+  .home-form .field-group {
+    display: block;
+    float: left;
+  }
+}
+@media only screen and (min-width: 480px) and (max-width: 899px) {
+  /* line 301, ../sass/_layout.scss */
+  .home-form .field-group {
+    display: block;
+    float: left;
+  }
+}
+/* line 320, ../sass/_layout.scss */
 .home-form input[type=text] {
   font-family: "minion-pro", sans-serif;
   padding-left: 15px;
@@ -1646,9 +1695,12 @@ ul#nav-new:after {
   font-size: 14px;
   border-radius: 2px;
   border: none;
+  width: 210px;
+  margin-bottom: 0;
 }
-/* line 290, ../sass/_layout.scss */
+/* line 332, ../sass/_layout.scss */
 .home-form select {
+  width: 230px;
   font-family: "minion-pro", sans-serif;
   -webkit-appearance: none;
   -moz-appearance: none;
@@ -1664,26 +1716,25 @@ ul#nav-new:after {
   color: #777;
   cursor: pointer;
 }
-/* line 307, ../sass/_layout.scss */
+/* line 351, ../sass/_layout.scss */
 .home-form .select {
   position: relative;
-  width: 20em;
   line-height: 35px;
   height: 47px;
   background: #fff;
   overflow: hidden;
   border-radius: 2px;
 }
-/* line 318, ../sass/_layout.scss */
+/* line 362, ../sass/_layout.scss */
 .home-form select {
   height: 100%;
   padding: 0 0 0 .5em;
 }
-/* line 326, ../sass/_layout.scss */
+/* line 370, ../sass/_layout.scss */
 .home-form select::-ms-expand {
   display: none;
 }
-/* line 333, ../sass/_layout.scss */
+/* line 377, ../sass/_layout.scss */
 .home-form button.submit {
   height: 48px;
   background-color: #fbac18;
@@ -1697,7 +1748,7 @@ ul#nav-new:after {
   padding: 0 20px 0 20px;
   font-weight: bold;
 }
-/* line 345, ../sass/_layout.scss */
+/* line 389, ../sass/_layout.scss */
 .home-form button.submit:hover {
   color: #fbac18;
   cursor: pointer;
@@ -1705,13 +1756,13 @@ ul#nav-new:after {
   background-color: white;
 }
 
-/* line 356, ../sass/_layout.scss */
+/* line 400, ../sass/_layout.scss */
 .home_line {
   margin-top: 30px;
   padding-bottom: 4px;
   border-bottom: 1px solid #99a7b9;
 }
-/* line 361, ../sass/_layout.scss */
+/* line 405, ../sass/_layout.scss */
 .home_line:after {
   content: "";
   width: 100%;
@@ -1720,25 +1771,25 @@ ul#nav-new:after {
   border-bottom: 1px solid #99a7b9;
 }
 
-/* line 372, ../sass/_layout.scss */
+/* line 416, ../sass/_layout.scss */
 a.more {
   float: right;
   font-weight: bold;
   font-style: italic;
 }
 
-/* line 376, ../sass/_layout.scss */
+/* line 420, ../sass/_layout.scss */
 .border-box-new {
   border: 2px solid #fbac18;
   padding: 10px;
 }
 
-/* line 381, ../sass/_layout.scss */
+/* line 425, ../sass/_layout.scss */
 .service-callout {
   text-align: center;
   padding-top: 30px;
 }
-/* line 384, ../sass/_layout.scss */
+/* line 428, ../sass/_layout.scss */
 .service-callout h3 {
   font-size: 21px;
   line-height: 28px;
@@ -1746,7 +1797,7 @@ a.more {
   padding-bottom: 20px;
 }
 
-/* line 393, ../sass/_layout.scss */
+/* line 437, ../sass/_layout.scss */
 a.button {
   height: 48px;
   border: 1px solid #fbac18;
@@ -1760,7 +1811,7 @@ a.button {
   padding: 5px 20px 5px 20px;
   font-weight: bold;
 }
-/* line 409, ../sass/_layout.scss */
+/* line 453, ../sass/_layout.scss */
 a.button:hover {
   cursor: pointer;
   border: 1px solid #fbac18;
@@ -1768,42 +1819,42 @@ a.button:hover {
   color: white;
 }
 
-/* line 416, ../sass/_layout.scss */
+/* line 460, ../sass/_layout.scss */
 .home-column-new {
   padding: 30px 0 20px 0;
 }
-/* line 419, ../sass/_layout.scss */
+/* line 463, ../sass/_layout.scss */
 .home-column-new h2 {
   font-family: "Oswald", sans-serif;
   text-transform: uppercase;
   font-size: 24px;
   letter-spacing: 1px;
 }
-/* line 425, ../sass/_layout.scss */
+/* line 469, ../sass/_layout.scss */
 .home-column-new h2 a:hover {
   color: #fbac18;
 }
-/* line 429, ../sass/_layout.scss */
+/* line 473, ../sass/_layout.scss */
 .home-column-new h3 {
   font-size: 19px;
   padding: 5px 0 10px 0px;
 }
-/* line 433, ../sass/_layout.scss */
+/* line 477, ../sass/_layout.scss */
 .home-column-new p, .home-column-new a.more {
   font-size: 16px;
   line-height: 21px;
 }
-/* line 437, ../sass/_layout.scss */
+/* line 481, ../sass/_layout.scss */
 .home-column-new.twitter {
   box-sizing: border-box;
   padding-left: 10px;
 }
-/* line 440, ../sass/_layout.scss */
+/* line 484, ../sass/_layout.scss */
 .home-column-new.twitter h1 {
   display: none;
 }
 
-/* line 450, ../sass/_layout.scss */
+/* line 494, ../sass/_layout.scss */
 .contact-block {
   height: 250px;
   box-sizing: border-box;
@@ -1813,7 +1864,7 @@ a.button:hover {
   background-color: rgba(0, 0, 0, 0.5);
   background-blend-mode: multiply;
 }
-/* line 459, ../sass/_layout.scss */
+/* line 503, ../sass/_layout.scss */
 .contact-block h3 {
   font-family: "Oswald", sans-serif;
   text-transform: uppercase;
@@ -1822,30 +1873,30 @@ a.button:hover {
   color: white;
   padding-bottom: 20px;
 }
-/* line 467, ../sass/_layout.scss */
+/* line 511, ../sass/_layout.scss */
 .contact-block p {
   font-size: 16px;
   color: white;
 }
 
-/* line 473, ../sass/_layout.scss */
+/* line 517, ../sass/_layout.scss */
 .pittsburgh {
   background-image: url("../images/Pittsburgh.jpg");
 }
 
-/* line 476, ../sass/_layout.scss */
+/* line 520, ../sass/_layout.scss */
 .wheeling {
   background-image: url("../images/Wheeling.jpg");
 }
 
-/* line 480, ../sass/_layout.scss */
+/* line 524, ../sass/_layout.scss */
 .center {
   text-align: center;
 }
 
 /* SUBHEADER Styles
 ================================================== */
-/* line 491, ../sass/_layout.scss */
+/* line 535, ../sass/_layout.scss */
 .page_title {
   display: block;
   position: absolute;
@@ -1861,7 +1912,7 @@ a.button:hover {
   margin-left: 700px;
   width: 485px;
 }
-/* line 506, ../sass/_layout.scss */
+/* line 550, ../sass/_layout.scss */
 .page_title h1 {
   padding: 20px 12px 20px 15px;
   margin: 5px;
@@ -1872,14 +1923,14 @@ a.button:hover {
   text-align: center;
 }
 @media only screen and (min-width: 900px) and (max-width: 1200px) {
-  /* line 491, ../sass/_layout.scss */
+  /* line 535, ../sass/_layout.scss */
   .page_title {
     margin-left: 525px;
     width: 360px;
   }
 }
 @media only screen and (min-width: 480px) and (max-width: 899px) {
-  /* line 491, ../sass/_layout.scss */
+  /* line 535, ../sass/_layout.scss */
   .page_title {
     width: 410px;
     margin-left: 0px;
@@ -1887,7 +1938,7 @@ a.button:hover {
     right: 0;
     bottom: 4%;
   }
-  /* line 519, ../sass/_layout.scss */
+  /* line 563, ../sass/_layout.scss */
   .page_title h1 {
     padding: 10px 5px 5px 10px;
     margin: 5px;
@@ -1900,7 +1951,7 @@ a.button:hover {
   }
 }
 @media only screen and (max-width: 479px) {
-  /* line 491, ../sass/_layout.scss */
+  /* line 535, ../sass/_layout.scss */
   .page_title {
     width: 300px;
     margin-left: 0px;
@@ -1908,7 +1959,7 @@ a.button:hover {
     left: 0;
     bottom: 2%;
   }
-  /* line 528, ../sass/_layout.scss */
+  /* line 572, ../sass/_layout.scss */
   .page_title h1 {
     padding: 8px 5px 8px 5px;
     margin: 5px;
@@ -1923,16 +1974,16 @@ a.button:hover {
 
 /* PAGE Styles
 ================================================== */
-/* line 535, ../sass/_layout.scss */
+/* line 579, ../sass/_layout.scss */
 .page_content {
   margin-top: 20px;
   min-height: 400px;
 }
-/* line 540, ../sass/_layout.scss */
+/* line 584, ../sass/_layout.scss */
 .page_content a:hover, .page_content a:focus, .page_content a:active {
   color: #fbac18;
 }
-/* line 543, ../sass/_layout.scss */
+/* line 587, ../sass/_layout.scss */
 .page_content h2 {
   text-transform: uppercase;
   color: #0c2649;
@@ -1940,7 +1991,7 @@ a.button:hover {
   border-bottom: 1px solid #fbac18;
   padding-bottom: 4px;
 }
-/* line 549, ../sass/_layout.scss */
+/* line 593, ../sass/_layout.scss */
 .page_content h2:after {
   content: "";
   width: 100%;
@@ -1949,43 +2000,43 @@ a.button:hover {
   border-bottom: 1px solid #fbac18;
 }
 
-/* line 560, ../sass/_layout.scss */
+/* line 604, ../sass/_layout.scss */
 .page_nav {
   padding: 15px 15px 40px 15px;
 }
-/* line 562, ../sass/_layout.scss */
+/* line 606, ../sass/_layout.scss */
 .page_nav li {
   padding-bottom: 6px;
 }
-/* line 563, ../sass/_layout.scss */
+/* line 607, ../sass/_layout.scss */
 .page_nav li a {
   color: #444444;
   text-transform: uppercase;
   font-weight: bold;
 }
-/* line 564, ../sass/_layout.scss */
+/* line 608, ../sass/_layout.scss */
 .page_nav li a:hover {
   color: #fbac18;
 }
 @media only screen and (min-width: 480px) and (max-width: 899px) {
-  /* line 560, ../sass/_layout.scss */
+  /* line 604, ../sass/_layout.scss */
   .page_nav {
     padding: 15px 15px 15px 15px;
   }
 }
 @media only screen and (max-width: 479px) {
-  /* line 560, ../sass/_layout.scss */
+  /* line 604, ../sass/_layout.scss */
   .page_nav {
     padding: 15px 15px 15px 15px;
   }
 }
 
-/* line 573, ../sass/_layout.scss */
+/* line 617, ../sass/_layout.scss */
 .page_side {
   margin-top: 20px;
 }
 
-/* line 578, ../sass/_layout.scss */
+/* line 622, ../sass/_layout.scss */
 .testimonials p {
   color: #0c2649;
   font-family: "minion-pro", sans-serif;
@@ -1994,79 +2045,79 @@ a.button:hover {
   padding: 25px 15px 25px 15px;
 }
 @media only screen and (max-width: 479px) {
-  /* line 576, ../sass/_layout.scss */
+  /* line 620, ../sass/_layout.scss */
   .testimonials {
     display: none;
   }
 }
 
-/* line 595, ../sass/_layout.scss */
+/* line 639, ../sass/_layout.scss */
 .landing_blocks {
   padding-left: 85px;
 }
-/* line 597, ../sass/_layout.scss */
+/* line 641, ../sass/_layout.scss */
 .landing_blocks .columns {
   margin-bottom: 20px;
 }
 @media only screen and (min-width: 900px) and (max-width: 1200px) {
-  /* line 595, ../sass/_layout.scss */
+  /* line 639, ../sass/_layout.scss */
   .landing_blocks {
     padding-left: 20px;
   }
 }
 @media only screen and (min-width: 480px) and (max-width: 899px) {
-  /* line 595, ../sass/_layout.scss */
+  /* line 639, ../sass/_layout.scss */
   .landing_blocks {
     padding-left: 0px;
   }
 }
 @media only screen and (max-width: 479px) {
-  /* line 595, ../sass/_layout.scss */
+  /* line 639, ../sass/_layout.scss */
   .landing_blocks {
     padding-left: 0px;
   }
 }
 
-/* line 614, ../sass/_layout.scss */
+/* line 658, ../sass/_layout.scss */
 .content ul, .content ol {
   margin-bottom: 10px;
 }
-/* line 615, ../sass/_layout.scss */
+/* line 659, ../sass/_layout.scss */
 .content ul {
   list-style: outside;
 }
-/* line 616, ../sass/_layout.scss */
+/* line 660, ../sass/_layout.scss */
 .content ol {
   list-style: decimal;
 }
-/* line 617, ../sass/_layout.scss */
+/* line 661, ../sass/_layout.scss */
 .content ol, .content ul {
   margin-left: 30px;
 }
-/* line 619, ../sass/_layout.scss */
+/* line 663, ../sass/_layout.scss */
 .content ul ul, .content ul ol,
 .content ol ol, .content ol ul {
   margin: 0px 0 0px 0px;
   font-size: 100%;
 }
-/* line 621, ../sass/_layout.scss */
+/* line 665, ../sass/_layout.scss */
 .content ul ul li, .content ul ol li,
 .content ol ol li, .content ol ul li {
   margin-bottom: 0px;
 }
-/* line 623, ../sass/_layout.scss */
+/* line 667, ../sass/_layout.scss */
 .content li {
   line-height: 18px;
   margin-bottom: 0px;
 }
 @media only screen and (min-width: 480px) and (max-width: 899px) {
-  /* line 612, ../sass/_layout.scss */
+  /* line 656, ../sass/_layout.scss */
   .content {
     padding-top: 20px;
   }
 }
 @media only screen and (max-width: 479px) {
-  /* line 612, ../sass/_layout.scss */
+  /* line 656, ../sass/_layout.scss */
   .content {
     padding-top: 20px;
   }
@@ -2074,18 +2125,18 @@ a.button:hover {
 
 /* FOOTER Styles
 ================================================== */
-/* line 638, ../sass/_layout.scss */
+/* line 682, ../sass/_layout.scss */
 #footer {
   width: 100%;
   background-color: #c0c0c0;
   margin-top: 80px;
 }
 
-/* line 643, ../sass/_layout.scss */
+/* line 687, ../sass/_layout.scss */
 .footer {
   padding-top: 20px;
 }
-/* line 648, ../sass/_layout.scss */
+/* line 692, ../sass/_layout.scss */
 .footer .menu ul {
   -moz-column-count: 3;
   -moz-column-gap: 20px;
@@ -2096,119 +2147,119 @@ a.button:hover {
   width: 450px;
 }
 @media only screen and (max-width: 479px) {
-  /* line 648, ../sass/_layout.scss */
+  /* line 692, ../sass/_layout.scss */
   .footer .menu ul {
     display: none;
   }
 }
 @media only screen and (min-width: 480px) and (max-width: 899px) {
-  /* line 648, ../sass/_layout.scss */
+  /* line 692, ../sass/_layout.scss */
   .footer .menu ul {
     display: none;
   }
 }
-/* line 664, ../sass/_layout.scss */
+/* line 708, ../sass/_layout.scss */
 .footer .menu li {
   list-style-type: none;
   font-weight: bold;
   margin-bottom: 18px;
 }
-/* line 669, ../sass/_layout.scss */
+/* line 713, ../sass/_layout.scss */
 .footer .menu li ul li {
   font-weight: normal;
   margin-bottom: 4px;
 }
-/* line 671, ../sass/_layout.scss */
+/* line 715, ../sass/_layout.scss */
 .footer .menu li a {
   color: #fff;
 }
-/* line 673, ../sass/_layout.scss */
+/* line 717, ../sass/_layout.scss */
 .footer .menu li a:hover {
   color: #0c2649;
 }
-/* line 677, ../sass/_layout.scss */
+/* line 721, ../sass/_layout.scss */
 .footer ul.footer-locations li {
   display: inline-block;
   float: left;
   padding-right: 20px;
   width: auto;
 }
-/* line 684, ../sass/_layout.scss */
+/* line 728, ../sass/_layout.scss */
 .footer h3 {
   text-transform: uppercase;
   font-weight: bold;
   font-size: 18px;
   margin-bottom: 18px;
 }
-/* line 685, ../sass/_layout.scss */
+/* line 729, ../sass/_layout.scss */
 .footer span.contact {
   color: #0c2649;
 }
-/* line 686, ../sass/_layout.scss */
+/* line 730, ../sass/_layout.scss */
 .footer p a {
   color: #0c2649;
 }
-/* line 687, ../sass/_layout.scss */
+/* line 731, ../sass/_layout.scss */
 .footer p a:hover {
   color: #ffffff;
 }
-/* line 688, ../sass/_layout.scss */
+/* line 732, ../sass/_layout.scss */
 .footer a img:hover {
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=70);
   opacity: 0.7;
 }
-/* line 690, ../sass/_layout.scss */
+/* line 734, ../sass/_layout.scss */
 .footer .footer_icon {
   right: 0;
   bottom: 50px;
   text-align: right;
   padding-bottom: 10px;
 }
-/* line 698, ../sass/_layout.scss */
+/* line 742, ../sass/_layout.scss */
 .footer .footer_icon p {
   margin-top: 10px;
 }
 @media only screen and (min-width: 900px) and (max-width: 1200px) {
-  /* line 704, ../sass/_layout.scss */
+  /* line 748, ../sass/_layout.scss */
   .footer .footer_icon img {
     max-width: 50px;
   }
 }
 @media only screen and (min-width: 480px) and (max-width: 899px) {
-  /* line 690, ../sass/_layout.scss */
+  /* line 734, ../sass/_layout.scss */
   .footer .footer_icon {
     padding-top: 10px;
     text-align: left;
   }
 }
 @media only screen and (max-width: 479px) {
-  /* line 690, ../sass/_layout.scss */
+  /* line 734, ../sass/_layout.scss */
   .footer .footer_icon {
     padding-top: 10px;
     text-align: left;
   }
 }
 
-/* line 722, ../sass/_layout.scss */
+/* line 766, ../sass/_layout.scss */
 .copyright {
   border-top: 1px solid #99a7b9;
   padding-top: 10px;
 }
 
-/* line 728, ../sass/_layout.scss */
+/* line 772, ../sass/_layout.scss */
 .mesh {
   float: right;
   margin-top: -38px;
 }
 @media only screen and (min-width: 480px) and (max-width: 899px) {
-  /* line 728, ../sass/_layout.scss */
+  /* line 772, ../sass/_layout.scss */
   .mesh {
     margin-top: 0px;
     float: left;
   }
 }
 @media only screen and (max-width: 479px) {
-  /* line 728, ../sass/_layout.scss */
+  /* line 772, ../sass/_layout.scss */
   .mesh {
     margin-top: 0px;
     float: left;
@@ -2218,45 +2269,45 @@ a.button:hover {
 /* #Page Styles
 ================================================== */
 @media only screen and (min-width: 900px) and (max-width: 1200px) {
-  /* line 748, ../sass/_layout.scss */
+  /* line 792, ../sass/_layout.scss */
   .leftcol {
     background-color: #ff0000;
   }
 }
 @media only screen and (min-width: 480px) and (max-width: 899px) {
-  /* line 748, ../sass/_layout.scss */
+  /* line 792, ../sass/_layout.scss */
   .leftcol {
     background-color: #1234ff;
   }
 }
 @media only screen and (max-width: 479px) {
-  /* line 748, ../sass/_layout.scss */
+  /* line 792, ../sass/_layout.scss */
   .leftcol {
     background-color: #003366;
   }
 }
 
-/* line 758, ../sass/_layout.scss */
+/* line 802, ../sass/_layout.scss */
 .contact-us {
   position: absolute;
   top: 10px;
   right: 10px;
 }
-/* line 763, ../sass/_layout.scss */
+/* line 807, ../sass/_layout.scss */
 .contact-us a:hover {
   color: white;
 }
 
-/* line 770, ../sass/_layout.scss */
+/* line 814, ../sass/_layout.scss */
 .container.page_content.f_bg {
   background-color: rgba(255, 255, 255, 0.8);
   padding: 25px 10px;
 }
-/* line 774, ../sass/_layout.scss */
+/* line 818, ../sass/_layout.scss */
 .container.page_content.f_bg a {
   color: #0c2649;
 }
-/* line 779, ../sass/_layout.scss */
+/* line 823, ../sass/_layout.scss */
 .container.page_content.f_bg h2 a {
   color: #0c2649;
 }
